@@ -1,3 +1,8 @@
+2011-11-14  Paul Smith  <psmith@gnu.org>
+
+	* scripts/features/double_colon: Check double-colon with escaped
+	filenames.  See Savannah bug #33399.
+
 2011-09-18  Paul Smith  <psmith@gnu.org>
 
 	* scripts/features/parallelism: On re-exec make sure we preserve
